react-template-helper: Add two tests
One test for required `component` argument to `{{> React}}`, now passes

Another test for sibling detection when rendering a React component within
a container element with a conditional additional element. This test
fails since after the first React render Blaze loses track of the marker
nodes it uses to place newly added elements. We may not be able to do
sibling detection in runtime, unfortunately. This test is commented out.

--- a/react-template-helper/react-template-helper-tests.html
+++ b/react-template-helper/react-template-helper-tests.html
@@ -1,22 +1,39 @@
+<template name="ReactTemplateWithoutComponent">
+  {{> React}}
+</template>
+
 <template name="EmptyComponentTemplateWithoutContainerElement">
   {{> React component=emptyComponent}}
 </template>
 
 <!-- used to test our error when rendering a react component with siblings -->
-<template name="UsesEmptyComponentTemplateWithSiblings">
+<template name="UsesEmptyComponentTemplateWithSibling">
   <div>
     <div>Sibling</div>
     {{> EmptyComponentTemplateWithoutContainerElement }}
   </div>
 </template>
 
+<template name="UsesEmptyComponentTemplateWithConditionalSibling">
+  <div>
+    {{#if sibling}}
+      <div>Sibling</div>
+    {{/if}}
+    {{> EmptyComponentTemplateWithoutContainerElement }}
+  </div>
+</template>
+
 <!--
 More tests:
-* "no sibling" detection works with an `{{#if}}` that starts empty
 * pass in props
 * props changing
 * pass in callbacks
 * callbacks changing
 * component type changing
+
+SIBLING DETECTION: (may be impossible -- see commented test in react-template-helper.jsx)
+  * text node siblings are also bad
+  * whitespace text node siblings are fine.
+  * "no sibling" detection works with an `{{#if}}` that starts empty
 -->
 
