react-template-helper: fix and test rerendering

--- a/react-template-helper/react-template-helper-tests.html
+++ b/react-template-helper/react-template-helper-tests.html
@@ -23,10 +23,14 @@
   </div>
 </template>
 
+<template name="UsesTextReactComponent">
+  <span>
+    {{> React component=textComponent text=text}}
+  </span>
+</template>
+
 <!--
 More tests:
-* pass in props
-* props changing
 * pass in callbacks
 * callbacks changing
 * component type changing
