react-template-helper: test passing in callbacks

--- a/react-template-helper/react-template-helper-tests.html
+++ b/react-template-helper/react-template-helper-tests.html
@@ -29,9 +29,14 @@
   </span>
 </template>
 
+<template name="UsesClickableReactComponent">
+  <span>
+    {{> React component=clickableComponent onClick=onClick }}
+  </span>
+</template>
+
 <!--
 More tests:
-* pass in callbacks
 * callbacks changing
 * component type changing
 
