react-template-helper: Test reactively changing callbacks

--- a/react-template-helper/react-template-helper-tests.html
+++ b/react-template-helper/react-template-helper-tests.html
@@ -37,12 +37,7 @@
 
 <!--
 More tests:
-* callbacks changing
 * component type changing
-
-SIBLING DETECTION: (may be impossible -- see commented test in react-template-helper.jsx)
-  * text node siblings are also bad
-  * whitespace text node siblings are fine.
-  * "no sibling" detection works with an `{{#if}}` that starts empty
+* subling detection: text node siblings are bad, but whitespace text node siblings are OK
 -->
 
