react-template-helper: unmount components
When a blaze template including a React component is destroyed, we now
properly unmount that component.

Fixes https://github.com/meteor/react-packages/issues/4

--- a/react-template-helper/test-templates.html
+++ b/react-template-helper/test-templates.html
@@ -47,3 +47,10 @@
     {{> React component=component}}
   </span>
 </template>
+
+<template name="UsesUnmountableComponent">
+  <span>
+    {{> React component=unmountableComponent onUnmounted=onUnmounted}}
+  </span>
+</template>
+
