Remove tests for run-time React component sibling check
The version of spacebars-compiler on devel contains compile time checks,
so we can't write template that would be used to write tests for this
code

Leave a comment in the code suggesting we remove the run-time sibling
testing once 1.1.1 is released.

--- a/packages/react-template-helper/test-templates.html
+++ b/packages/react-template-helper/test-templates.html
@@ -1,32 +1,6 @@
-<template name="ReactTemplateWithoutComponent">
-  {{> React}}
-</template>
-
-<template name="EmptyComponentTemplateWithoutContainerElement">
-  {{> React component=emptyComponent}}
-</template>
-
-<!-- used to test our error when rendering a react component with siblings -->
-<template name="UsesEmptyComponentTemplateWithSiblingElement">
+<template name="ReactTemplateInDiv">
   <div>
-    <div>Sibling</div>
-    {{> EmptyComponentTemplateWithoutContainerElement }}
-  </div>
-</template>
-
-<template name="UsesEmptyComponentTemplateWithSiblingTextNode">
-  <div>
-    Sibling
-    {{> EmptyComponentTemplateWithoutContainerElement }}
-  </div>
-</template>
-
-<template name="UsesEmptyComponentTemplateWithConditionalSibling">
-  <div>
-    {{#if sibling}}
-      <div>Sibling</div>
-    {{/if}}
-    {{> EmptyComponentTemplateWithoutContainerElement }}
+    {{> React}}
   </div>
 </template>
 
