Revert "Remove tests for run-time React component sibling check"
We now use a hack where we define a template named
`ReactWithoutCompileTimeSiblingRestriction` which does
the same as `React` but doesn't trigger the compile-time "no sibling"
rule that currently exists on meteor/meteor devel but not on master.

This lets the run-time sibling tests to pass with Meteor running either
from devel (1.1.1+) or master (1.1)

--- a/packages/react-template-helper/test-templates.html
+++ b/packages/react-template-helper/test-templates.html
@@ -1,6 +1,32 @@
-<template name="ReactTemplateInDiv">
+<template name="ReactTemplateWithoutComponent">
+  {{> ReactWithoutCompileTimeSiblingRestriction}}
+</template>
+
+<template name="EmptyComponentTemplateWithoutContainerElement">
+  {{> ReactWithoutCompileTimeSiblingRestriction component=emptyComponent}}
+</template>
+
+<!-- used to test our error when rendering a react component with siblings -->
+<template name="UsesEmptyComponentTemplateWithSiblingElement">
   <div>
-    {{> React}}
+    <div>Sibling</div>
+    {{> EmptyComponentTemplateWithoutContainerElement }}
+  </div>
+</template>
+
+<template name="UsesEmptyComponentTemplateWithSiblingTextNode">
+  <div>
+    Sibling
+    {{> EmptyComponentTemplateWithoutContainerElement }}
+  </div>
+</template>
+
+<template name="UsesEmptyComponentTemplateWithConditionalSibling">
+  <div>
+    {{#if sibling}}
+      <div>Sibling</div>
+    {{/if}}
+    {{> EmptyComponentTemplateWithoutContainerElement }}
   </div>
 </template>
 
