--- a/examples/react-todos/client/head.html
+++ b/examples/react-todos/client/head.html
@@ -6,3 +6,7 @@
   <link rel="shortcut icon" type="image/png" href="favicon.png?v1" sizes="16x16 32x32 64x64">
   <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-precomposed.png">
 </head>
+
+<body>
+  <div id="app-container"></div>
+</body>
