renames Leaderboard to PlayerList
Since this component is for a list of players it doesn’t make sense to
call
it Leaderboard (that makes more sense for the parent IMHO).

--- a/examples/leaderboard/leaderboard.html
+++ b/examples/leaderboard/leaderboard.html
@@ -15,7 +15,7 @@
 
 <template name="leaderboard">
   <div>
-    {{> React component=Leaderboard
+    {{> React component=PlayerList
       players=players.fetch
       selectedPlayerId=selectedPlayerId }}
   </div>
