rename to follow structure of react-todos

--- a/examples/material-ui-leaderboard/client/index.html
+++ b/examples/material-ui-leaderboard/client/index.html
@@ -3,3 +3,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,600' rel='stylesheet' type='text/css'>
 </head>
+
+<body>
+  <div id='container'></div>
+</body>
