--- a/examples/material-ui-leaderboard/client/index.html
+++ b/examples/material-ui-leaderboard/client/index.html
@@ -1,9 +1,8 @@
 <head>
   <title>Leaderboard</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,600' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-  <div id='container'></div>
+  <div id="app"></div>
 </body>
